- Tmp fix for IOS 12 video viewer on iphone

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
@@ -605,3 +605,16 @@ picture {
 .c-fyc__result__content__button .btn i {
     display:none;
 }
+
+//Tmp fix ios 12 video
+.s7videoviewer {
+    overflow:visible !important;
+}
+
+.iosFullScreenVideo .modal-content, .iosFullScreenVideo .slick-slider .slick-list{
+    overflow:visible !important;
+}
+
+.iosFullScreenVideo .slick-slider .slick-prev, .iosFullScreenVideo .slick-slider .slick-next, .iosFullScreenVideo .c-gallery__counter {
+    display:none !important;
+}
